# AiGate

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  context.md  database.py  docker-compose.yml  entrypoint.sh  init_db.py  litellm-config.yaml  main.py  preload_models.py  pyproject.toml  requirements.txt  seed.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx  Chat.css  Chat.tsx  Sidebar.css  Sidebar.tsx  api.ts
gliner2-PII/: README.md  config.json  gliner2_config.json  tokenizer_config.json
models/: db_models.py  entity_mapping.py  models.py
routers/: __init__.py  anonymizer.py  chat.py  config.py  deanonymizer.py  mappings.py  regex_patterns.py  scan.py  scanner.py
scanners/: pipeline.py  scanner.py
scanners/input_scanners/: pii_scanner.py  prompt_guard.py  regex_scanner.py  toxicity_scanner.py
services/: audit_service.py  config_service.py  gateway_service.py  mapping_service.py  model_loader.py  regex_service.py
utils/: config_service.py  gliner2Recognizer.py  glinerConfig.py  mapping_service.py  models.py  null_nlp_engine.py  vault.py
