[project]
name = "gateway"
version = "0.1.0"
description = "LLM Security & Reversible Anonymization Gateway"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "redis",
    "presidio-analyzer",
    "presidio-analyzer[gliner]",
    "presidio_anonymizer",
    "openai",
    "pydantic-settings>=2.0.0",
    "httpx",
]
